# prime-vllm

./: .env.example  .gitignore  Dockerfile  README.md  generate.py  main.py  pyproject.toml  shard.py  shard_model.py
.github/workflows/: release.yml
script/: install.sh
