[project]
name = "prime-vllm"
version = "0.1.0"
description = "PRIME-VLLM: Modded vLLM to run pipeline parallelism over public networks"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "transformers>=4.50.3",
    "vllm>=0.8.2",
    "autorootcwd>=1.0.1",
    "loguru>=0.7.3",
    "prime-iroh @ git+https://github.com/PrimeIntellect-ai/prime-iroh.git@65a48f0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
]
