[project]
name = "prime-vllm"
version = "0.1.0"
description = "PRIME-VLLM: Modded vLLM to run pipeline parallelism over public networks"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "transformers>=4.51.3",
    "vllm>=0.8.5",
    "autorootcwd>=1.0.1",
    "loguru>=0.7.3",
    "prime-iroh>=0.1.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
]
